<resources>
    <string name="username1">رقم الهاتف</string>
    <string name="password1">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="newAccount">ليس لديك حساب؟ إضغط هنا</string>
    <string name="forget">هل نسيت كلمة المرور؟</string>
    <string name="pass">كلمة المرور</string>
    <string name="repass">اعادة كلمة المرور</string>
    <string name="phone_num">رقم الهاتف</string>
    <string name="register">تسجيل</string>
    <string name="lastName">الاسم الاخير</string>
    <string name="firstName">الاسم الأول</string>
    <string name="classification">التصنيف</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="check">أدخل رمز التأكيد</string>
    <string name="authentic">رمز التحقق</string>
    <string name="dont_do">أدخل الرمز المكون من 4 ألارقام الذي تم إرساله في رقم هاتفك</string>
    <string name="check_btn">تحقق</string>
    <string name="didnt_get_code">لم يصلك رمز التحقق؟</string>
    <string name="resend">إضغط هنا لإعادة الإرسال</string>
    <string name="confirm">تأكيد</string>
    <string name="retypepass">أعد كلمة المرور</string>
    <string name="typepass">كلمة المرور</string>
    <string name="commitpass">قم بإدخال كلمة المرور الجديدة</string>
    <string name="phone3">رقم الهاتف</string>
    <string name="search_account">بحث عن الحساب</string>
    <string name="commit_phone">أدخل رقم الهاتف الخاص بك للبحث عن حسابك</string>
    <string name="welcome">مرحبا بكم في مباشر</string>
    <string name="first">تطبيقك الأول لإختيار عقارك</string>
    <string name="type_here">Type Here</string>
    <string name="rooms_here">Rooms Here</string>
    <string name="title_here">Title Here</string>
    <string name="details">تفاصيل</string>
    <string name="suits">شقق فندقية</string>
    <string name="fullapart">شقق مفروشة</string>
    <string name="notFullApart">شقق غير مفروشة</string>
    <string name="welcomen">Welcome :\n</string>
    <string name="search">Search</string>
</resources>