<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/mubashir_register">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/mubashir_icon_trans"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <EditText
            android:id="@+id/text_field_last_name"
            android:layout_marginHorizontal="10dp"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/lastName"
            android:textSize="16sp"
            android:background="@drawable/edit_text_shape"
            android:drawableEnd="@drawable/ic_username"
            android:padding="5dp"
            android:fontFamily="@font/jazeera_arabic_regular"
            android:layout_gravity="start"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorSimiPrimary"
            android:inputType="text"/>

        <EditText
            android:layout_marginHorizontal="10dp"
            android:id="@+id/text_field_first_name"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/firstName"
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:background="@drawable/edit_text_shape"
            android:drawableEnd="@drawable/ic_username"
            android:padding="5dp"
            android:fontFamily="@font/jazeera_arabic_regular"
            android:layout_gravity="end"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorSimiPrimary"
            android:inputType="text"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <AutoCompleteTextView
        android:id="@+id/text_field_specification"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/classification"
        android:drawableEnd="@drawable/ic_account"
        android:padding="5dp"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorSimiPrimary"
        android:textSize="16sp"
        android:background="@drawable/edit_text_shape"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        android:inputType="textAutoComplete"/>

    <EditText
        android:id="@+id/text_field_phone"
        android:layout_marginTop="10dp"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/phone_num"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:padding="5dp"
        android:textColor="@color/colorSimiPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp"
        android:inputType="phone"/>

    <EditText
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:padding="5dp"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:drawableEnd="@drawable/ic_mail"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/text_field_password"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/pass"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorSimiPrimary"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/text_field_repass"
        android:layout_marginTop="10dp"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_shape"
        android:textColor="@color/colorSimiPrimary"
        android:hint="@string/repass"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:padding="5dp"
        android:textColorHint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_shape"
        android:text="@string/register"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorSimiPrimary"
        android:fontFamily="@font/jazeera_arabic_regular"
        />


</LinearLayout>