<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_gravity="center"
    android:background="@drawable/mubashir_login">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/mubashir_icon_trans" />


    <EditText
        android:id="@+id/edit_text_username"
        android:layout_marginTop="45dp"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/ic_phone"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:hint="@string/username1"
        android:padding="10dp"
        android:textColor="@color/colorSimiPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="18sp"
        android:inputType="phone" />

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:id="@+id/login_botton"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_shape"
        android:text="@string/login"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:textColor="@color/colorSimiPrimary"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/new_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:text="@string/newAccount"
        android:textColor="@color/colorSimiPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:text="@string/forget"
        android:textColor="@color/colorSimiPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>