<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordResetActivity"
    android:background="@drawable/mubashir_login">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/mubashir_icon_trans"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commit_phone"
        android:textSize="18sp"
        android:fontFamily="@font/cairo_regular"
        android:textStyle="bold"
        android:textColor="@color/colorSimiPrimary" />

    <EditText
        android:id="@+id/search_account"
        android:background="@drawable/edit_text_shape"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:hint="@string/phone3"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorSimiPrimary"
        android:drawableStart="@drawable/ic_phone"
        android:padding="5dp"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:textSize="16sp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:inputType="phone"/>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/search_account"
        android:textSize="22sp"
        android:textColor="@color/colorSimiPrimary"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:background="@drawable/btn_shape"/>

</LinearLayout>