<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity"
    android:background="@drawable/mubashir_login">

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/mubashir_icon_trans"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/check"
        android:textSize="30sp"
        android:fontFamily="@font/cairo_regular"
        android:textColor="@color/colorSimiPrimary"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/colorSimiPrimary"
        android:textAlignment="center"
        android:fontFamily="@font/cairo_regular"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/dont_do"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_code1"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/edit_text_shape"
            tools:ignore="LabelFor" />
        <EditText
            android:layout_marginStart="10dp"
            android:id="@+id/input_code2"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/edit_text_shape"
            tools:ignore="LabelFor" />
        <EditText
            android:layout_marginStart="10dp"
            android:id="@+id/input_code3"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/edit_text_shape"
            tools:ignore="LabelFor" />
        <EditText
            android:layout_marginStart="10dp"
            android:id="@+id/input_code4"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:textAlignment="center"
            android:layout_height="50dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/edit_text_shape"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didnt_get_code"
        android:textSize="18sp"
        android:textColor="@color/colorSimiPrimary"
        android:fontFamily="@font/jazeera_arabic_regular"
        />
    <TextView
        android:id="@+id/resend"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:textSize="18sp"
        android:textColor="@color/colorSimiPrimary"
        android:clickable="true"
        android:focusable="true"
        />

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_shape"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/check_btn"
        android:textStyle="bold"
        android:textSize="22sp"
        android:fontFamily="@font/jazeera_arabic_regular"
        android:textColor="@color/colorSimiPrimary"
        />

</LinearLayout>