<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppartmentsActivity"
    android:background="@drawable/mubashir_login"
    android:orientation="vertical">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_person_add"
            />
        <TextView
            android:id="@+id/textName"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomen"
            android:textStyle="bold"
            android:textColor="@color/colorSimiPrimary"
            android:textSize="18sp"
            android:fontFamily="@font/jazeera_arabic_regular"/>

        <ImageView
            android:id="@+id/logoutButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_signout"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loImgs"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_gravity="center"
            android:id="@+id/imgRecycler"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:visibility="visible"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/suitApart"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/jazeera_arabic_regular"
            android:text="@string/suits"
            android:textColor="@color/colorSimiPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/fullApart"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/jazeera_arabic_regular"
            android:text="@string/fullapart"
            android:textColor="@color/colorSimiPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/simiFullApart"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/jazeera_arabic_regular"
            android:text="@string/notFullApart"
            android:textColor="@color/colorSimiPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>



</LinearLayout>